[tool.poetry]
name = "math-homework-generator"
version = "0.1.0"
description = ""
authors = ["skapadia <skapadia@chariotsolutions.com>"]
readme = "README.md"
packages = [{include = "math_homework_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.3"
jupyterlab = "^4.0.11"
openai = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
